--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ CMakeSettings.json
 Makefile
 /cmake-build-debug-visual-studio/
 /cmake-build-release-visual-studio/
+/cmake-build-relwithdebinfo-visual-studio/
