--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_subdirectory(vendor/glm)
 add_subdirectory(vendor/imgui-docking)
 add_subdirectory(vendor/assimp)
 add_subdirectory(vendor/spdlog)
+add_subdirectory(vendor/freetype)
 
 FetchContent_Declare(
         JoltPhysics
@@ -112,6 +113,6 @@ target_include_directories("${CMAKE_PROJECT_NAME}" PUBLIC "${CMAKE_CURRENT_SOURC
 target_precompile_headers("${CMAKE_PROJECT_NAME}" PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/gpch.h")
 target_include_directories(${CMAKE_PROJECT_NAME}  PUBLIC ${JoltPhysics_SOURCE_DIR})
 target_link_libraries("${CMAKE_PROJECT_NAME}" PRIVATE glm spdlog::spdlog_header_only
-        stb_image stb_truetype imgui SDL3-static assimp Jolt)
+        stb_image stb_truetype imgui SDL3-static assimp Jolt freetype)
 
 
