--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,9 +24,12 @@ project(goon)
 include(FetchContent)
 
 set(SDL_STATIC ON)
+set(SDLMIXER_VENDORED OFF)
+set(SDLMIXER_STATIC ON)
 set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
 
 add_subdirectory(vendor/SDL)
+add_subdirectory(vendor/SDL_mixer)
 add_subdirectory(vendor/glad)
 add_subdirectory(vendor/stb_image)
 add_subdirectory(vendor/stb_truetype)
@@ -113,6 +116,6 @@ target_include_directories("${CMAKE_PROJECT_NAME}" PUBLIC "${CMAKE_CURRENT_SOURC
 target_precompile_headers("${CMAKE_PROJECT_NAME}" PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/gpch.h")
 target_include_directories(${CMAKE_PROJECT_NAME}  PUBLIC ${JoltPhysics_SOURCE_DIR})
 target_link_libraries("${CMAKE_PROJECT_NAME}" PRIVATE glm spdlog::spdlog_header_only
-        stb_image stb_truetype imgui SDL3-static assimp Jolt freetype)
+        stb_image stb_truetype imgui SDL3-static assimp Jolt freetype SDL3_mixer-static)
 
 
