--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ Makefile
 /cmake-build-debug-visual-studio/
 /cmake-build-release-visual-studio/
 /cmake-build-relwithdebinfo-visual-studio/
+/cmake-build-debug/
+/cmake-build-release/
+/cmake-build-relwithdebinfo/
