--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ if (MSVC)
     add_compile_options(/arch:AVX2) #make sure SIMD optimizations take place
 endif ()
 
-project(goon)
+project(cologne)
 
 include(FetchContent)
 
